--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "dlt[duckdb]>=1.3.0",
+    "psutil>=6.1.1",
     "tqdm>=4.67.1",
 ]
