--- a/transform/dbt_project.yml
+++ b/transform/dbt_project.yml
@@ -31,6 +31,8 @@ flags:
 
 models:
   strava_transform:
+    core:
+      +materialized: table
     intermediate:
       +materialized: table
     staging:
