--- a/transform/models/staging/strava/stg_strava_activities.yml
+++ b/transform/models/staging/strava/stg_strava_activities.yml
@@ -41,6 +41,12 @@ models:
       - name: speed_max_metric
         description: "The maximum speed achieved during the activity, in kilometers per hour (kph)."
       
+      - name: speed_avg_raw
+        description: "The average speed during the activity, in meters per second (m/s)."
+      
+      - name: speed_max_raw
+        description: "The maximum speed achieved during the activity, in meters per second (m/s)."
+      
       - name: power_average
         description: "The average power output during the activity, in watts (W)."
       
@@ -62,6 +68,9 @@ models:
         description: "The total distance covered during the activity, in miles (mi)."
 
       - name: distance_metric
+        description: "The total distance covered during the activity, in kilometers (km)."
+
+      - name: distance_raw
         description: "The total distance covered during the activity, in meters (m)."
       
       - name: elapsed_seconds
@@ -71,7 +80,10 @@ models:
         description: "The total moving time of the activity, in seconds."
 
       - name: elevation_gain
-        description: "The total elevation gain during the activity, in feet."
+        description: "The total elevation gain during the activity, in feet (ft)."
+      
+      - name: elevation_gain_metric
+        description: "The total elevation gain during the activity, in meters (m)."
       
       - name: elevation_min
         description: "The lowest elevation reached during the activity, in feet (ft)."
